--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-size-matters": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
