--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "overrides": {
+    "react-native-picker-select": {
+      "@react-native-picker/picker": "$@react-native-picker/picker"
+    }
   }
 }
