--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "^3.25.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.13.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
