--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.25.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.13.0",
+    "react-native-toast-message": "^2.1.6",
     "react-query": "^3.39.3",
     "zod": "^3.22.2"
   },
