Update app name to Shopping Cart

--- a/ios/ShoppingCart/Info.plist
+++ b/ios/ShoppingCart/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ShoppingCart</string>
+	<string>Shopping&#x2007;Cart</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
