--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,6 +87,12 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        } 
+        release {
+            storeFile file('shopping_cart.keystore')
+            storePassword '123456'
+            keyAlias 'shopping_cart'
+            keyPassword '123456'
         }
     }
     buildTypes {
@@ -96,7 +102,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
