--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.13.0",
     "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^9.2.0",
     "react-query": "^3.39.3",
     "zod": "^3.22.2"
   },
@@ -35,6 +36,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "jest": "^29.2.1",
